# mycoSwarm

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFESTO.md  PLAN.md  README.md  SECURITY.md  chart.py  cli.py  fix-changelog-cc-prompt.md  install.sh  phase-32-sleep-cycle-plan.md  pyproject.toml
.github/workflows/: test-linux.yml  test-mac.yml
docs/: 21a_cli_integration.md  21b_29b_v020_integration.md  21c_temporal_boost.md  21d_procedural_memory.md  21d_procedure_growth.md  29a_cli_integration.md  ARCHITECTURE-COGNITIVE.md  ARCHITECTURE-INTENT-PLAN.md  ARCHITECTURE-MEMORY.md  ARCHITECTURE-RAG.md  INSIDERLLM-PROJECT.md  Monica_Chat_notes.txt  Monica_Chat_notes.txt~  SKILL.md  TEST_PLAN.md  THREAT-MODEL.md  adam-lucek-research-notes.md  cc-prompt-monica-voice-procedure.md  cc-prompt-phase-34a-instinct-layer.md  cc-prompt-phase-35c-code-hardening.md  cc-prompt-phase-35d-swarm-auth.md  cc-prompt-phase-35f-security-procedure.md  cc-prompt-phase-35g-threat-model.md  cc-prompt-release-v0.2.12.md  cc-prompt-vitals-per-turn-logging.md  chart-cc-guide.md  fix-changelog-cc-prompt.md  insiderllm-content-plan.md  memory-architecture-research-notes.md  monica-day2-article-prompt.md  monica-developmental-curriculum.md  monica-emotional-procedures.md  mycoswarm-white-paper-outline-v2.md  mycoswarm-white-paper-outline.md  openclaw-article-prompt.md  phase20b-timing-gate.md  phase31-identity-layer (1).md  phase31d-vitals-cc-prompt.md  seed-procedures-cc-prompt.md  session-summary-2026-02-18.md
docs/latest/: cc-prompt-write-hardware-injection.md  cc-prompt-write-pipeline.md  cc-prompt-write-web-search.md
plugins/example_summarize/: handler.py  plugin.yaml
scripts/: install-safety-procedures.py  install.sh  mycoswarm.service  swarm-update.sh
src/mycoswarm/: __init__.py  api.py  auth.py  capabilities.py  chart.py  cli.py  daemon.py  discovery.py  hardware.py  identity.py  instinct.py  library.py  memory.py  node.py  orchestrator.py  plugins.py  rag_eval.py  resource_policy.py  solo.py  timing.py  vitals.py  worker.py
src/mycoswarm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/mycoswarm/dashboard/: __init__.py  app.py
src/mycoswarm/dashboard/static/: dashboard.js  style.css
src/mycoswarm/dashboard/templates/: index.html
tests/: conftest.py  plugins.py  rag_eval.py  rag_eval_set.json  test_agentic.py  test_api.py  test_auth.py  test_capabilities.py  test_chat_rag.py  test_hardware.py  test_identity.py  test_instinct.py  test_intent.py  test_library.py  test_memory.py  test_orchestrator.py  test_plugins.py  test_procedures.py  test_resource_policy.py  test_rich_episodic.py  test_timing.py  test_vitals.py  test_vitals_logging.py  test_worker.py
tests/smoke/: run_all.sh  smoke_book.sh  smoke_intent.sh  smoke_memory.sh  smoke_poison.sh  smoke_procedure.sh  smoke_rag.sh  smoke_swarm.sh
whitepaper/: white-paper-reading-list.md
