[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mycoswarm"
version = "0.1.0"
description = "Distributed AI framework — grow your own cluster from whatever hardware you've got"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "zeroconf>=0.131.0",
    "psutil>=5.9.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
    "fastapi>=0.111.0",
    "ddgs>=9.0.0",
    "pymupdf>=1.24.0",
    "chromadb>=0.4.0",
]

[project.scripts]
mycoswarm = "mycoswarm.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["src"]
